<?xml version="1.0"?>
<package>
  <name>coop_localization</name>
  <version>0.1.1</version>
  <description>The cooperative_localization package</description>


  <maintainer email="jonathan.hechtbauer@gmail.com">Jonathan Hechtbauer</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <!--<build_depend>uvc_camera</build_depend> -->
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend> 
  <build_depend>cmake_modules</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <!-- <run_depend>uvc_camera</run_depend> -->
  <run_depend>tf</run_depend>
  <!--<run_depend>message_generation</run_depend>-->
  <run_depend>message_runtime</run_depend> 
  <run_depend>cmake_modules</run_depend>



  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>



